wp-content/themes/betheme-child/style172.css
/* ... */
@media only screen and (min-width: 768px) and (max-width: 1440px) {
  .mcb-item-7hplt2hve {
    width: 66.666% !important;
    left: 0;
    right: 0;
    margin: auto;
  }
}

@media only screen and (min-width: 481px) and (max-width: 1440px) {
  #mfn-header-template .button {
    font-size: 10px !important;
    margin-left: 15px !important;
    position: absolute;
    right: 45px;
    top: -20px;
    padding-left: 10px;
    padding-right: 10px;
    margin-right: 25px !important;
  }

  #apps {
    background-size: contain;
  }
}

@media only screen and (min-width: 481px) {
  #slider-1-slide-1-layer-0 {
    white-space:nowrap!important;
    width:100%!important;
    top:-10px;
  }
}

@media only screen and (min-width: 1441px) {
  .mcb-item-7hplt2hve {
    width: 60% !important;
    left: 0;
    right: 0;
    margin: auto;
  }
}

@media only screen and (max-width: 1440px) {
  .apps-fade::after {
    background: radial-gradient(#1c1c1c 40%, rgba(0,0,0,0) 100%);
  }
}

@media only screen and (max-width: 1239px) {
  .hover-contrib {
    display: none;
    visibility: hidden;
  }

  .sponsor {
    margin-left: 0px;
  }

  .mcb-column-inner-38bd9f044 h2 {
    margin-right: 5px;
  }

  .title-desktop .space,
  .title-desktop .word-placement {
    display: none;
    visibility: hidden;
  }

  .title-desktop .anim-word-container:not(.no-anim-break) .anim-word {
    width: 100%;
    text-align: center;
    left: 0;
  }

  .title-desktop .anim-word-container:not(.no-anim-break) {
    display: block;
    margin-bottom: 67px;
  }
}

@media only screen and (max-width: 1239px) and (min-width:768px) {
  .mfn-header-menu > .mfn-menu-li > .mfn-menu-link > .label-wrapper > .menu-label {
    font-size: 12px;
  }

  .mfn-header-menu > .mfn-menu-li > .mfn-menu-link {
    padding: 8px 15px;
  }

  #community .one-third {
    min-height: 340px;
  }

  #community .button_label {
    white-space:nowrap;
  }

  #community .mcb-wrap-f6578f478 .column_button,
  #community .mcb-wrap-60a8360ce .column_button,
  #community .mcb-wrap-2215d7379 .column_button {
    bottom: 0;
    position: absolute;
    width: 80%;
    left: 0;
    right: 0;
    margin: auto;
  }

  #hardware .one-third {
    min-height: 526px;
  }

  .ametrine {
    max-height: 300px !important;
    right: -8% !important;
  }

  #apps .app-background-container {
    top: 12%!important;
  }
}

@media only screen and (max-width: 959px) {
  .title-apps .space,
  .title-apps .word-placement {
    display: none;
    visibility: hidden;
  }

  .anim-word-container:not(.no-anim-break) .anim-word {
    width: 100%;
    text-align: center;
    left: 0;
  }

  .anim-word-container:not(.no-anim-break) {
    display: block;
    margin-bottom: 67px;
  }

  #mfn-header-template .hide-mobile {
    display: block !important;
  }

  .mcb-column-inner-j1cgwfhsd a.fork {
    margin-bottom: 15px;
  }

  .mcb-item-d69573929.column {
    text-align: left;
  }

  .mcb-item-d69573929 i {
    display: flex;
    height: 100%;
    float: left;
    align-items: center;
  }

  .video-container {
    padding: 0px;
    margin-top: 20px;
  }

  .changelog {
    margin-top: 30px;
  }

  .video-container {
    padding-bottom: 0px;
    margin-bottom: 0px;
  }

  .mcb-section-6r8me65zo,
  .mcb-section-7f0434abe {
    padding-bottom: 60px!important;
  }

  #mfn-header-template .button {
    position: absolute;
    right: 45px;
    top: -20px;
  }

  #mfn-header-template .button > .button_label,
  #hardware-description .explaination {
    display: none;
    visibility: hidden;
  }

  #mfn-header-template .button > .button_icon {
    font-size: 20px;
    position: relative;
    text-shadow: 0px 0px 5px rgba(0,0,0,0.25);
  }

  #menu-main-menu,
  #menu-main-menu-2 {
    display: none !important;
  }

  .mcb-section .mcb-wrap .mcb-item-o12qouxct {
    flex: 0 0 200px;
    max-width: 200px;
  }

  #diy .mcb-item-button-inner,
  #diy .desc {
    text-align: center!important;
  }

  .ublue-container {
    display: block;
  }

  .ublue-container > a,
  .ublue-container .text-container {
      width: 100%;
      margin: auto;
      display: block !important;
      text-align: center;
  }

  .ublue-container > a {
    margin-bottom: 15px;
  }

  #diy .mcb-item-button-inner {
    margin-left: 0px;
  }

  #apps .column_button {
    margin-bottom: 15px;
  }

  .mcb-section .mcb-wrap .mcb-item-0270g8ums .button,
  .mcb-section .mcb-wrap .mcb-item-3itblyq2a .button {
    padding-top: 10px;
    padding-bottom: 10px;
  }

  #community .one-third {
    min-height: 410px;
  }

  #hardware .one-third {
    min-height: 510px;
  }

  #features .column_trailer_box {
    min-height: 50vw;
  }

  .testimonials_slider .testimonials_slider_ul li .bq_wrapper {
    margin: 0 15px 20px !important;
  }

  #image-builder-result {
    padding-top: 30px;
    padding-bottom: 30px;
    margin-top: 50px;
  }

  .iso-selection {
    width: 100%;
    margin-bottom: 30px;
  }

  .rebase {
    border-top: 2px solid #575757;
    padding-top: 50px;
    margin-bottom: 0px;
    width: 100%;
  }

  #image-builder,
  #image-builder-result {
    text-align: center;
  }

  .faq {
    padding-right: 0px;
  }

  #hardware-description {
    text-align: center;
  }

  #image-builder select,
  .select-wrapper,
  #image-builder .download-logo {
    width: 100%;
    max-width: inherit;
  }

  .sha256 {
    margin-top: 16px;
  }

  .ghcr-details {
    margin-top: 5px;
  }

  .github-profile-badge:not(.always-expanded) .github-profile-badge-name-wrapper {
    display: none;
    visibility: hidden;
  }
}

@media only screen and (min-width: 960px) {
  h2 {
    font-size: 55px;
  }

  .mfn-header-menu-burger {
    display: none!important;
  }

  .mcb-section .mcb-wrap .mcb-item-o12qouxct {
    flex: 0 0 240px;
    max-width: 240px;
  }

  #mfn-header-template .button {
    box-shadow: 0px 0px 5px rgba(0,0,0,0.25);
  }

  .mcb-item-vm71wq22a {
    display: none;
    visibility: hidden;
  }
}
/* ... */

